Fixed stats page and piechart overlapping with navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
   width: 100%;
   background-color: #ff69b4;
   position: fixed;
+  z-index: 2;
 }
 
 .nav-container {
