--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -14,9 +14,10 @@
 .question-stats {
   display: flex;
   flex-direction: row;
-  margin: 10px 0px;
+  margin: 20px 0px;
   width: 100%;
-  height: 30%;
+  height: 60%;
+  min-height: 150px;
 }
 
 .questions-container {
